Test image added

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="/images/html.jpeg" alt="html image" />
+                    <img src="./images/html.jpeg" alt="html image" />
                     <h3>Week 2 - HTML & CSS</h3>
                     <p>Posted on October 22, 2023</p>
                     <p><a href="week2.html">Journal entry for week 2</a></p>
