--- a/codeWars.html
+++ b/codeWars.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +21,9 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a src="/images/logoImage.png" id="logo" href="index.html" alt="Logo image"></a>
+                <a href="index.html">
+                    <h1>S</h1>
+                </a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
@@ -83,7 +87,7 @@
                     things by writing too many lines of code or creating unnecessary variables. Seeing others' solutions
                     made me realize there are simpler and more effective ways to achieve the same result.<br><br>
 
-                    <img src="images/codeSolution.png"><br><br>
+                    <img src="./images/codeSolution.png"><br><br>
 
                     The above is a challenge I solved on Codewars where you get an array of
                     numbers and return the sum of all of the positive ones e.g. Example [1,-4,7,12]=> 1 + 7 + 12 = 20.
@@ -97,7 +101,7 @@
                     to
                     posSum. After going through all the elements the total is returned.<br><br>
 
-                    <img src="images/altCodeSolution.png"> <br><br>
+                    <img src="./images/altCodeSolution.png"> <br><br>
 
 
                     The kata is solved here in a more concise way using the reduce function.
