--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a src="/images/logoImage.png" id="logo" href="index.html" alt="Logo image"></a>
+                <a href="index.html">
+                    <h1>S</h1>
+                </a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
@@ -73,7 +75,7 @@
 
             <div class="flex">
                 <div class="card">
-                    <img src="/images/codeImage.jpeg" alt="JavaScript image" />
+                    <img src="./images/codeImage.jpeg" alt="JavaScript image" />
                     <h3>Week 1 - JavaScript Fundamentals</h3>
                     <p>Posted on October 19, 2023</p>
                     <p><a href="week1.html">Journal entry for week 1</a></p>
@@ -89,14 +91,14 @@
                 </div>
 
                 <div class="card">
-                    <img src="/images/cvImage.jpg" alt="Codewars image" />
+                    <img src="./images/cvImage.jpg" alt="Codewars image" />
                     <h3>Week 1 & 2 - Getting prepared for the job market</h3>
                     <p>Posted on October 23, 2023</p>
                     <p><a href="week2.html">Journal entry for week 1 & 2</a></p>
                 </div>
 
                 <div class="card">
-                    <img src="/images/codewarsImage.png" alt="CV image" />
+                    <img src="./images/codewarsImage.png" alt="CV image" />
                     <h3>Codewars (Learning by doing on coding challenge websites)</h3>
                     <p>Posted on October 25, 2023</p>
                     <p><a href="codeWars.html">Journal entry for week 3</a></p>
