--- a/week1.html
+++ b/week1.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +22,9 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a src="/images/logoImage.png" id="logo" href="index.html" alt="Logo image"></a>
+                <a href="index.html">
+                    <h1>S</h1>
+                </a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
