--- a/week2.html
+++ b/week2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +20,9 @@
     <div id="header-hero-container">
         <header>
             <div class="flex container">
-                <a src="/images/logoImage.png" id="logo" href="index.html" alt="Logo image"></a>
+                <a href="index.html">
+                    <h1>S</h1>
+                </a>
                 <nav>
                     <button id="nav-toggle" class="hamburger-menu">
                         <span class="strip"></span>
@@ -122,7 +125,7 @@
                 </ul>
             </div>
         </div>
-
+        <small>Copyright &copy; 2023 All rights reserved</small>
     </footer>
 
     <script>
@@ -173,7 +176,3 @@
 </body>
 
 </html>
-
-</html> ang">
-
-</html> ang">
