--- a/week2.html
+++ b/week2.html
@@ -36,6 +36,7 @@
                         <li><a href="week2.html">Week 2</a></li>
                         <li><a href="codeWars.html">Coding Challenge Websites</a></li>
                         <li><a href="jobSkills.html">Employability Skills</a></li>
+                        <li><a href="week3.html">Week 3</a></li>
 
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
