--- a/week3.html
+++ b/week3.html
@@ -8,11 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link href="./style.css" rel="stylesheet">
+    <title>Bootcamp Diaries</title>
+
+    <link rel="stylesheet" href="./style.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
-    <title>Bootcamp diaries</title>
 </head>
 
 <body>
@@ -48,85 +49,43 @@
         <section id="hero">
             <div class="fade">
                 <div class="hero-text">
-                    <h1>Coding Challenge Websites</h1>
+                    <h1>Week 3
+                    </h1>
+
                 </div>
             </div>
         </section>
     </div>
 
-
-
-    <section id="codewars">
+    <section id="employability-skills">
         <div class="container">
-            <div>
-                <p>To enhance our learning experience, we were advised to register on
-                    Codewars. It is a platform designed for software developers to improve their javascript abilities
-                    through
-                    various challenges. This site offers a multitude (yes, I checked) of coding katas with varying
-                    levels of
-                    difficulty, ranging from 8 (the easiest) to 1 (the most challenging). I challenged myself to
-                    complete at
-                    least one kata every day and even formed a group with my peers - the competitive side in me enjoyed
-                    this
-                    secretly. Each successfully completed kata earns you points on Codewars' scoring system. Not only
-                    does
-                    it serve as a fantastic way to practice javascript, but it also helps develop problem-solving
-                    skills.
-                    Their tagline "Achieve mastery through challenge" was motivating and made the whole experience
-                    engaging
-                    and fun. This led me to explore other websites that catered towards beginners such as Edabit,
-                    Exercism,
-                    HackerRank and Advent of Code - which I will be utilising to help me level up my problem-solving
-                    skills.
-                    One thing I found extremely beneficial while working on a kata was being able to check out other
-                    coders'
-                    solutions. It was great to see how different people approached the same problem and it helped me
-                    broaden
-                    my problem-solving skills. Plus, I could do some extra research on the methods they used and gain
-                    new
-                    insights that helped me write more efficient code. Sometimes, I realized that I was overcomplicating
-                    things by writing too many lines of code or creating unnecessary variables. Seeing others' solutions
-                    made me realize there are simpler and more effective ways to achieve the same result.<br><br>
+            <div class="flex">
+                <p>Week 3 was dedicated to refining our journals and delving into Flexbox. With the help of the
+                    resources provided and a trusty companion - YouTube, the styling of my website began to take shape.
+                    We were given ample self-study time, allowing us to work on our design and content.<br><br>
+                    On Tuesday, in our alternate session, we collaborated in groups to delve into the Project life
+                    cycle, exploring various approaches to Agile. It was during this session that I was introduced to
+                    Scrum—a project management framework centred around breaking down tasks into manageable sprints,
+                    allowing for focused planning and management one step at a time. In addition to this, I dedicated
+                    time to making a data schema for a case study on an archery app and designed the app's interface
+                    using PowerPoint.<br><br>
+                    Thursday saw us continue our venture into Project management. Within our groups we delved into the
+                    functionalities essential for our app, engaging in discussions and drafting user story cards for our
+                    opening menu. Additionally, we made a flow chart to visualise the steps a user would take on the
+                    landing page.<br><br>
+                    Friday presented us with a challenge, we were given an hour to tackle three codewars challenges of
+                    varying difficulty. While I succeeded in the first challenge, I encountered difficulties with the
+                    remaining two. Nevertheless, my attempts demonstrated my determination, and I am eager to revisit
+                    and successfully complete them. We also dedicated time to completing our project until 3:30 PM,
+                    after which we concluded the week with an employability session.<br><br><br><br>
+                    Looking ahead to week 4, the weeks have been flying by!
 
-                    <img src="./images/codeSolution.png"><br><br>
-
-                    The above is a challenge I solved on Codewars where you get an array of
-                    numbers and return the sum of all of the positive ones e.g. Example [1,-4,7,12]=> 1 + 7 + 12 = 20.
-                    In my solution, I check
-                    if
-                    the input array is empty and returns 0 if it is. I then create a variable called posSum and set
-                    it
-                    to 0, this is to keep track of the positive sum. I then wrote a loop to go through each element
-                    of
-                    the array one by one. Inside the loop, if the element is greater than 0 (positive) it gets added
-                    to
-                    posSum. After going through all the elements the total is returned.<br><br>
-
-                    <img src="./images/altCodeSolution.png"> <br><br>
-
-
-                    The kata is solved here in a more concise way using the reduce function.
-                    JavaScript reduce() is a higher-order function used in data manipulation that reduces an array to a
-                    single value. It takes two parameters: an accumulator and the current element of an array. Its uses
-                    include calculating the sum or product of all elements, finding the maximum and minimum value,
-                    flattening an array, and more. Also, the reduce function automatically returns 0 for an empty
-                    array.<br><br> This is an
-                    example
-                    of
-                    Codewars being great for exposure to more efficient and easier-to-read code. My current score on
-                    Codewars is 60. My goal is to attempt at least one kata every day.<br><br>
                 </p>
-
-                <p>Click below to go to the codewars website</p>
-                <a href="https://www.codewars.com/">
-                    <img src="images/codewarsImage.png">
-                </a>
-
             </div>
         </div>
-
-        </div>
     </section>
+
+
 
     <!-- FOOTER -->
     <footer>
@@ -137,6 +96,8 @@
                     transitioning into a career in technology. Follow me on social media for more details and keep an
                     eye out for my latest blog posts. </p>
             </div>
+
+
 
             <div class="footer-follow">
                 <h5 class="follow-us">Follow Me</h5>
