--- a/week2.html
+++ b/week2.html
@@ -37,6 +37,8 @@
                         <li><a href="codeWars.html">Coding Challenge Websites</a></li>
                         <li><a href="jobSkills.html">Employability Skills</a></li>
                         <li><a href="week3.html">Week 3</a></li>
+                        <li><a href="week4.html">Week 4</a></li>
+                        <li><a href="week5.html">Week 5</a></li>
 
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
@@ -116,7 +118,7 @@
                     eye out for my latest blog posts. </p>
             </div>
 
-            <div class="footer-follow">
+            <!-- <div class="footer-follow">
                 <h5 class="follow-us">Follow Me</h5>
                 <ul>
                     <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
@@ -124,7 +126,7 @@
                     <li><a href="#"><span class="fab fa-instagram"></span></a></li>
                     <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         <small>Copyright &copy; 2023 All rights reserved</small>
     </footer>
