--- a/week4.html
+++ b/week4.html
@@ -42,6 +42,7 @@
                         <li><a href="week4.html">Week 4</a></li>
                         <li><a href="week5.html">Week 5</a></li>
 
+
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
                 </nav>
@@ -51,100 +52,49 @@
         <section id="hero">
             <div class="fade">
                 <div class="hero-text">
-                    <h1>Week 1</h1>
-                    <h2>JavaScript Fundamentals</h2>
+                    <h1>Week 4
+                    </h1>
+
                 </div>
             </div>
         </section>
     </div>
 
-    <section id="week1">
+    <section id="employability-skills">
         <div class="container">
-            <div>
-                <p>On October 9th, I embarked on the boot camp journey, diving headfirst into a week dedicated to
-                    mastering JavaScript fundamentals. During this initial week, I had the pleasure of meeting my tutors
-                    and fellow boot campers. Through introductions and casual conversations, we began to forge
-                    connections and get acquainted. Despite my initial nervousness, the warm welcome and the realisation
-                    that we were all navigating this new terrain together provided a reassuring sense of unity.<br><br>
+            <div class="flex">
+                <p>Week 4 started with a dive into the Document Object Model (DOM) in JavaScript. This model
+                    visualizes HTML documents as a tree, letting us tweak structure, style, and content in real time. We
+                    explored an array of JavaScript methods to finesse the DOM for captivating user experiences.<br><br>
+                    Following our tutor's instructions, I ventured into crafting a key code generator, unknowingly a
+                    sneak peek into our week's core project. This involved creating HTML and CSS files, shaping and
+                    styling them. My workflow revolved around initially setting up the structure in HTML and utilizing
+                    JavaScript's DOM and using keyboardEvent.code property to capture key presses. I ensured
+                    adaptability, making the page responsive to varying screen resolutions.<br><br>
+                    Midweek, I embarked on an adventure to construct a virtual drum kit. This project revolved around
+                    DOM intricacies, key events, and jazzing it up with CSS animations. By week's end, I'd woven in
+                    event listeners to buttons and keystrokes, linking keyboard taps or button clicks to different drums
+                    in a classic drum set. Each click brought forth the distinct beat of the selected drum, making it an
+                    interactive experience. I also incorporated a button hover feature to visually indicate the user's
+                    interaction, adding an extra layer of engagement to the experience.<br><br><br>
+                    In our alternate class, we delved into SQL, focusing on the concept of normalisation. Normalisation
+                    serves to minimize redundancy within database tables, streamlining their structure. Our exploration
+                    delved deep into the intricacies of First, Second, and Third Normal Form. Initially challenging, I
+                    found that hands-on practice, along with comparisons of various tables, helped solidify my
+                    understanding.<br><br>
+                    We also looked into Primary Keys and the pivotal role of Foreign Keys in linking tables. As we
+                    progressed, the puzzle pieces started fitting together when we unravelled the different data
+                    relationships: One-to-One, One-to-Many, and Many-to-Many. Understanding these relationships helped
+                    me figure out how to effectively split up tables.
 
-                </p>
 
-                <h3>Day 1: Dot Notation & Data Types</h3>
-                <p>We explored Dot Notation and Data Types. Dot Notation is a way to interact with objects, enabling us
-                    to read,
-                    modify, and invoke properties. Data Types are the values we instruct the computer to work with, such
-                    as numbers,
-                    strings, and booleans.
-                    By the end of day 1, I created a nifty random number generator program. It was amazing that with
-                    just one line
-                    of code, I could get random numbers effortlessly.
-                </p>
 
-                <h3>Day 2:</h3>
-                <p>Variable Exploration and Naming Conventions
-                    Day 2 was an adventure in variables. I learned how they store different types of data and how to
-                    manipulate
-                    them. We covered the various ways to declare a variable and the art of JavaScript naming
-                    conventions.
-                    It felt like I was handed a toolkit of endless possibilities. The more I experimented, the more I
-                    realized the
-                    potential in my code.
-                </p>
 
-                <h3>Day 3: If Else Statements</h3>
-                <p>
-                    Day 3 was all about adding logic to our code. We dove into the world of If-Else statements,
-                    giving
-                    our programs
-                    the power to make decisions.
-                    Using Comparison Operators, I practised making my code perform different actions for
-                    different
-                    decisions.
-                    I first practised making a program with a single condition and then crafted a program using
-                    multiple
-                    conditions,
-                    making the code execute different moves depending on the situation.
-                    Comparison operators and logical operators
-                </p>
-
-                <h3>Day 4: Arrays/Loops</h3>
-                <p>Day 4 we studied arrays and objects: Manipulating arrays, accessing object properties, and
-                    using
-                    built-in
-                    methods. Going through loops was eye-opening, in JavaScript one line can be written to
-                    repeat a
-                    task
-                    based on a
-                    condition automatically a certain number of times.
-                </p>
-
-                <h3> Day 5: JS Tasks</h3>
-                <p>Day 5 brought forth an exciting challenge: completing JavaScript tasks in pairs. It was a
-                    good
-                    opportunity to
-                    put our newly acquired knowledge to the test and apply the concepts we had learned
-                    throughout
-                    the
-                    week. Teaming
-                    up with a fellow boot camper we tackled the challenges together. We shared insights,
-                    compared
-                    code,
-                    and
-                    complemented each other's strengths. As we worked through the challenges, I could feel a
-                    sense
-                    of
-                    accomplishment
-                    with every problem solved.
-                </p>
-
-                <p>This first week was a whirlwind of learning, and I'm eagerly anticipating what's in store for
-                    the
-                    upcoming
-                    weeks. Learning JavaScript has proven to be quite an exciting ride!
                 </p>
             </div>
         </div>
     </section>
+
 
 
     <!-- FOOTER -->
@@ -156,6 +106,8 @@
                     transitioning into a career in technology. Follow me on social media for more details and keep an
                     eye out for my latest blog posts. </p>
             </div>
+
+
 
             <!-- <div class="footer-follow">
                 <h5 class="follow-us">Follow Me</h5>
