--- a/week5.html
+++ b/week5.html
@@ -42,6 +42,8 @@
                         <li><a href="week4.html">Week 4</a></li>
                         <li><a href="week5.html">Week 5</a></li>
 
+
+
                         <li id="close-flyout"><span class="fas fa-times"></span></li>
                     </ul>
                 </nav>
@@ -51,100 +53,56 @@
         <section id="hero">
             <div class="fade">
                 <div class="hero-text">
-                    <h1>Week 1</h1>
-                    <h2>JavaScript Fundamentals</h2>
+                    <h1>Week 5
+                    </h1>
+
                 </div>
             </div>
         </section>
     </div>
 
-    <section id="week1">
+    <section id="employability-skills">
         <div class="container">
-            <div>
-                <p>On October 9th, I embarked on the boot camp journey, diving headfirst into a week dedicated to
-                    mastering JavaScript fundamentals. During this initial week, I had the pleasure of meeting my tutors
-                    and fellow boot campers. Through introductions and casual conversations, we began to forge
-                    connections and get acquainted. Despite my initial nervousness, the warm welcome and the realisation
-                    that we were all navigating this new terrain together provided a reassuring sense of unity.<br><br>
-
-                </p>
-
-                <h3>Day 1: Dot Notation & Data Types</h3>
-                <p>We explored Dot Notation and Data Types. Dot Notation is a way to interact with objects, enabling us
-                    to read,
-                    modify, and invoke properties. Data Types are the values we instruct the computer to work with, such
-                    as numbers,
-                    strings, and booleans.
-                    By the end of day 1, I created a nifty random number generator program. It was amazing that with
-                    just one line
-                    of code, I could get random numbers effortlessly.
-                </p>
-
-                <h3>Day 2:</h3>
-                <p>Variable Exploration and Naming Conventions
-                    Day 2 was an adventure in variables. I learned how they store different types of data and how to
-                    manipulate
-                    them. We covered the various ways to declare a variable and the art of JavaScript naming
-                    conventions.
-                    It felt like I was handed a toolkit of endless possibilities. The more I experimented, the more I
-                    realized the
-                    potential in my code.
-                </p>
-
-                <h3>Day 3: If Else Statements</h3>
+            <div class="flex">
                 <p>
-                    Day 3 was all about adding logic to our code. We dove into the world of If-Else statements,
-                    giving
-                    our programs
-                    the power to make decisions.
-                    Using Comparison Operators, I practised making my code perform different actions for
-                    different
-                    decisions.
-                    I first practised making a program with a single condition and then crafted a program using
-                    multiple
-                    conditions,
-                    making the code execute different moves depending on the situation.
-                    Comparison operators and logical operators
-                </p>
+                    In the fifth week of our journey, we delved into intermediate concepts. Our exploration began with
+                    the event loop, delving into the essence of JavaScript's single-threaded nature. Understanding
+                    asynchronous programming became a pivotal point in our learning path. Throughout the intermediate
+                    JavaScript sessions, we covered numerous topics:<br><br>
+                    • JS Engine<br>
+                    • Execution Context<br>
+                    • Call Stack<br>
+                    • Memory Heap<br>
+                    • Event Loop<br>
+                    • Callback Queue<br>
+                    • Global Scope<br>
+                    • Function Scope<br>
+                    • Block Scope<br>
+                    • Async & Await<br>
+                    • Class syntax and Class inheritance<br>
+                    • Promises<br>
+                    • Object-Oriented Programming<br><br><br>
+                    Reflecting on these concepts, it's amusing to see the array of new knowledge awaiting absorption.
+                    Among these, classes stood out as particularly enjoyable. Their definition as "templates for
+                    creating objects, encapsulating data and functions for manipulation" sparked creativity during our
+                    exercises. Crafting a Tamagotchi class and extending its functionalities served as a hands-on
+                    application of our learning.
+                    Towards the end of the week, our utilization of the inquirer library for user interactions led to
+                    the creation of functional programs, culminating in a fun implementation of a rock-paper-scissors
+                    game. It was an engaging experience.<br><br>
+                    There are definitely grounds for further practice and exploration. While I've coded along to videos
+                    and referred to documentation, the realisation has dawned that a good level of understanding
+                    necessitates consistent application across diverse scenarios. Embracing that I am a beginner and
+                    being gentle in my expectations proves to be a valuable lesson along this learning curve.<br><br>
 
-                <h3>Day 4: Arrays/Loops</h3>
-                <p>Day 4 we studied arrays and objects: Manipulating arrays, accessing object properties, and
-                    using
-                    built-in
-                    methods. Going through loops was eye-opening, in JavaScript one line can be written to
-                    repeat a
-                    task
-                    based on a
-                    condition automatically a certain number of times.
-                </p>
 
-                <h3> Day 5: JS Tasks</h3>
-                <p>Day 5 brought forth an exciting challenge: completing JavaScript tasks in pairs. It was a
-                    good
-                    opportunity to
-                    put our newly acquired knowledge to the test and apply the concepts we had learned
-                    throughout
-                    the
-                    week. Teaming
-                    up with a fellow boot camper we tackled the challenges together. We shared insights,
-                    compared
-                    code,
-                    and
-                    complemented each other's strengths. As we worked through the challenges, I could feel a
-                    sense
-                    of
-                    accomplishment
-                    with every problem solved.
-                </p>
 
-                <p>This first week was a whirlwind of learning, and I'm eagerly anticipating what's in store for
-                    the
-                    upcoming
-                    weeks. Learning JavaScript has proven to be quite an exciting ride!
+
                 </p>
             </div>
         </div>
     </section>
+
 
 
     <!-- FOOTER -->
@@ -156,6 +114,8 @@
                     transitioning into a career in technology. Follow me on social media for more details and keep an
                     eye out for my latest blog posts. </p>
             </div>
+
+
 
             <!-- <div class="footer-follow">
                 <h5 class="follow-us">Follow Me</h5>
